--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
     "firebase": "^5.3.0",
+    "jquery": "^3.3.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
     "react": "^16.6.3",
